--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -60,6 +60,18 @@ nav {
     box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.144);
 }
 
+@media(max-width:450px){
+    nav > a {
+        width: 100px;
+        display: block;
+        margin-bottom: 10px;
+    }
+    nav {
+        display: grid;
+        place-items: center;
+    }
+}
+
 nav a{
     font-family: var(--fonte-padrao);
     font-weight: bolder;
@@ -68,7 +80,6 @@ nav a{
     padding: 10px;
     margin-right: 1px;
     border-radius: 5px;
-
 }
 
 nav a:hover {
